flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/ers_datatableConfig__c.object-meta.xml
<CustomObject>
    <description>Store attributes for the Column Wizard Flow that is part of the Datatable CPE</description>
    <label>ers_datatableConfig</label>
    <nameField>
        <label>ers_datatableConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ers_datatableConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>