flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/fields/Alignments__c.field-meta.xml
<CustomField>
    <fullName>Alignments__c</fullName>
    <label>Alignments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>