flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <label>Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>