flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/fields/Other_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Other_Attributes__c</fullName>
    <label>Other Attributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>