flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/fields/Wraps__c.field-meta.xml
<CustomField>
    <fullName>Wraps__c</fullName>
    <label>Wraps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>