flow_screen_components/datatable/force-app/main/default/objects/ers_datatableConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Names__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>